tests/ui/borrowck/writing-to-immutable-vec.stderr
error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/writing-to-immutable-vec.rs:3:5
   |
LL |     v[1] = 4;
   |     ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut v: Vec<isize> = vec![1, 2, 3];
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
